Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_tegram-api.yml
+++ b/.github/workflows/main_tegram-api.yml
@@ -36,12 +36,21 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: java-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_49BBFD7C6820417FBCAB454D1EE313AA }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A7C1B132D29E4DDFBD969DD371A239AE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0E3C9FE8A50948918212423A0682C7B8 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -49,5 +58,5 @@ jobs:
         with:
           app-name: 'tegram-api'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_31DA3C74A7134F0594C51EE33D6CA593 }}
           package: '*.war'
+          
