changes to enable containerization

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+dbhost=localhost:5432
+dbname=final_capstone
+
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/final_capstone
+spring.datasource.url=jdbc:postgresql://${dbhost}/${dbname}
+
 spring.datasource.name=final_capstone
 spring.datasource.username=final_capstone_appuser
 spring.datasource.password=finalcapstone
